--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "5.0.0",
     "react-simple-image-slider": "^2.3.0",
     "web-vitals": "^2.1.2"
