--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "junctionx",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^5.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
-    "react-router-transition": "^2.1.0",
+ 
     "react-scripts": "5.0.0",
-    "react-simple-image-slider": "^2.3.0",
-    "web-vitals": "^2.1.2"
+    "react-simple-image-slider": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
