--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "junctionx",
+  "homepage": "https://github.com/abdenour-progdes/junctionx",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
- 
     "react-scripts": "5.0.0",
     "react-simple-image-slider": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploye": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
